WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256220
[css-grid][masonry] Size of grid in masonry axis not getting computed correctly
https://bugs.webkit.org/show_bug.cgi?id=256220
Summary
[css-grid][masonry] Size of grid in masonry axis not getting computed correctly
Sammy Gill
Reported
2023-05-02 12:02:32 PDT
It seems like in certain scenarios the grid in the masonry direction is getting sized slightly incorrectly. This is causing the following tests to fail even though the items are positioned correctly according to the masonry algorithm: masonry-item-placement-002.html masonry-item-placement-004.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-02 12:02:59 PDT
<
rdar://problem/108801925
>
Sammy Gill
Comment 2
2023-05-02 16:39:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13381
EWS
Comment 3
2023-05-03 17:12:13 PDT
Committed
263657@main
(95758ddf1955): <
https://commits.webkit.org/263657@main
> Reviewed commits have been landed. Closing PR #13381 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug