[grid][masonry] Do not add extra grid gap at the bottom of masonry rows. https://bugs.webkit.org/show_bug.cgi?id=256220 rdar://108801925

Reviewed by Brent Fulgham.

We should only be applying gaps between the margin boxes of each pair
of adjacent items in the masonry axis. By adding in an extra gap to
the grid content size (the largest distance between the grid
container’s content-box start edge and the maximum margin-box end of
all the items), we are adding extra spacing that is causing the block
size of the grid to become larger than it should be when the masonry
axis is in the row direction. Instead, we should make sure we just use
the grid content size provided by GridMasonryLayout for the grid's
block size.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderGrid.cpp:
(WebCore::RenderGrid::layoutMasonry):

Canonical link: https://commits.webkit.org/263657@main